--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
                 <li><a href="http://sayit.poplus.org/">SayIt</a></li>
                 <li><a href="http://represent.poplus.org/">Represent Boundaries</a></li>
             </ul>
-            <a href="mailto:represent@opennorth.ca" class="contact-us-footer-link">Contact us</a>
+            <a href="mailto:{{ site.email }}" class="contact-us-footer-link">Contact us</a>
         </div>
         <div class="poplus-founders">
             <p>Poplus was proudly founded by</p>
