remove as a service docs, write install docs

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,16 +1,10 @@
 <nav class="inner-navigation">
     <ul>
         <li><a href="{{ site.baseurl }}/docs/"><h2>Using Represent Boundaries</h2></a></li>
-        <li><a href="{{ site.baseurl }}/docs/as-a-service/">As a service</a></li>
-        <li>
-            <a href="{{ site.baseurl }}/docs/self-hosted/">Self-hosted</a>
-            <ul>
-                <li><a href="{{ site.baseurl }}/docs/self-hosted/install/">Install</a></li>
-                <li><a href="{{ site.baseurl }}/docs/self-hosted/import/">Add new data</a></li>
-                <li><a href="{{ site.baseurl }}/docs/self-hosted/api/">Use the API</a></li>
-                <li><a href="{{ site.baseurl }}/docs/self-hosted/manage/">Manage your data</a></li>
-            </ul>
-        </li>
+        <li><a href="{{ site.baseurl }}/docs/install/">Install</a></li>
+        <li><a href="{{ site.baseurl }}/docs/import/">Add new data</a></li>
+        <li><a href="{{ site.baseurl }}/docs/api/">Use the API</a></li>
+        <li><a href="{{ site.baseurl }}/docs/manage/">Manage your data</a></li>
         <li><a href="{{ site.baseurl }}/docs/why/">When to use it</a></li>
         <li><h2>Getting help</h2></li>
         <li><a href="https://github.com/opennorth/represent-boundaries/">GitHub</a></li>
