--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <nav class="inner-navigation">
     <ul>
         <li><a href="{{ site.baseurl }}/docs/"><h2>Using Represent Boundaries</h2></a></li>
-        <li><a href="{{ site.baseurl }}/docs/install/">Install</a></li>
-        <li><a href="{{ site.baseurl }}/docs/import/">Add new data</a></li>
+        <li><a href="{{ site.baseurl }}/docs/install/">Installation</a></li>
+        <li><a href="{{ site.baseurl }}/docs/import/">Add data to the API</a></li>
         <li><a href="{{ site.baseurl }}/docs/api/">Use the API</a></li>
         <li><a href="{{ site.baseurl }}/docs/manage/">Manage your data</a></li>
         <li><a href="{{ site.baseurl }}/docs/why/">When to use it</a></li>
