match sidebar to represent-boundaries readme

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
         <li><a href="{{ site.baseurl }}/docs/install/">Installation</a></li>
         <li><a href="{{ site.baseurl }}/docs/import/">Add data to the API</a></li>
         <li><a href="{{ site.baseurl }}/docs/api/">Use the API</a></li>
-        <li><a href="{{ site.baseurl }}/docs/manage/">Manage your data</a></li>
+        <li><a href="{{ site.baseurl }}/docs/manage/">Update data in the API</a></li>
         <li><a href="{{ site.baseurl }}/docs/why/">When to use it</a></li>
         <li><h2>Getting help</h2></li>
         <li><a href="https://github.com/opennorth/represent-boundaries/">GitHub</a></li>
