--- a/_includes/html-head.html
+++ b/_includes/html-head.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/global.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
     <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="{{ site.baseurl }}/assets/js/modernizr.min.js"></script>
     <script type="text/javascript" src="//use.typekit.net/sbp2hrv.js"></script>
