add api reference

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,11 @@
 <nav class="inner-navigation">
     <ul>
-        <li><a href="{{ site.baseurl }}/docs/"><h2>Using Represent Boundaries</h2></a></li>
+        <li><a href="{{ site.baseurl }}/docs/"><h2>Documentation</h2></a></li>
         <li><a href="{{ site.baseurl }}/docs/install/">Installation</a></li>
         <li><a href="{{ site.baseurl }}/docs/import/">Add data to the API</a></li>
         <li><a href="{{ site.baseurl }}/docs/api/">Use the API</a></li>
         <li><a href="{{ site.baseurl }}/docs/manage/">Update data in the API</a></li>
+        <li><a href="{{ site.baseurl }}/docs/reference/">API reference</a></li>
         <li><a href="{{ site.baseurl }}/docs/why/">When to use it</a></li>
         <li><h2>Getting help</h2></li>
         <li><a href="https://github.com/opennorth/represent-boundaries/">GitHub</a></li>
