fix GitHub casing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
             <nav role="navigation" class="primary-navigation nav-collapse">
                 <ul>
                     <li><a href="{{ site.baseurl }}/docs/">Documentation</a></li>
-                    <li><a href="{{ site.repository_url }}">Github</a></li>
+                    <li><a href="{{ site.repository_url }}">GitHub</a></li>
                 </ul>
             </nav>
         </div>
