--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,8 @@
             <nav role="navigation" class="primary-navigation nav-collapse">
                 <ul>
                     <li><a href="{{ site.baseurl }}/docs/">Documentation</a></li>
+                    <li><a href="{{ site.baseurl }}/docs/reference/">API Reference</a></li>
+                    <li><a href="mailto:represent@opennorth.ca">Contact us</a></li>
                     <li><a href="{{ site.repository_url }}">GitHub</a></li>
                 </ul>
             </nav>
