--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                 <ul>
                     <li><a href="{{ site.baseurl }}/docs/">Documentation</a></li>
                     <li><a href="{{ site.baseurl }}/docs/reference/">API Reference</a></li>
-                    <li><a href="mailto:represent@opennorth.ca">Contact us</a></li>
+                    <li><a href="mailto:represent@opennorth.ca">Contact Us</a></li>
                     <li><a href="{{ site.repository_url }}">GitHub</a></li>
                 </ul>
             </nav>
