--- a/_includes/html-head.html
+++ b/_includes/html-head.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/global.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
-    <link href='http://fonts.googleapis.com/css?family=Signika:400,600,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Signika:400,600,700' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="{{ site.baseurl }}/assets/js/modernizr.min.js"></script>
     <script type="text/javascript" src="//use.typekit.net/sbp2hrv.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
