--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,6 @@
 <header class="site-header">
     <div class="container">
-        <a href="{{ site.baseurl }}/" class="poplus-logo-tab">Poplus</a>
-        <a href="{{ site.baseurl }}/" class="site-title"><span class="component-title">{{ site.title }}</span><span class="dot-poplus">.Poplus</span></a>
+        <a href="{{ site.baseurl }}/" class="site-title"><span class="component-title">{{ site.title }}</span></a>
         <div class="primary-navigation-position">
             <nav role="navigation" class="primary-navigation nav-collapse">
                 <ul>
