--- a/assets/sass/_represent-styles.scss
+++ b/assets/sass/_represent-styles.scss
@@ -1,3 +1,12 @@
+.site-title {
+  margin-left: 0;
+}
+@media (min-width: 33.75em) {
+  .site-title {
+    margin-left: 0;
+  }
+}
+
 pre code {
   white-space: pre;
 }
